force-app/main/default/objects/SouthAfricanIDNumber_Record__c/SouthAfricanIDNumber_Record__c.object-meta.xml
<CustomObject>
    <label>South African ID Number Record</label>
    <nameField>
        <displayFormat>SAIDNR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>South African ID Number Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>