force-app/main/default/objects/SouthAfricanIDNumber_Record__c/fields/API_Service_Error__c.field-meta.xml
<CustomField>
    <fullName>API_Service_Error__c</fullName>
    <label>API Service Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>