force-app/main/default/objects/SouthAfricanIDNumber_Record__c/fields/BirthDay__c.field-meta.xml
<CustomField>
    <fullName>BirthDay__c</fullName>
    <label>BirthDay</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>