force-app/main/default/objects/SouthAfricanIDNumber_Record__c/fields/BirthMonth__c.field-meta.xml
<CustomField>
    <fullName>BirthMonth__c</fullName>
    <label>BirthMonth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>