force-app/main/default/objects/SouthAfricanIDNumber_Record__c/fields/BirthYear__c.field-meta.xml
<CustomField>
    <fullName>BirthYear__c</fullName>
    <label>BirthYear</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>