force-app/main/default/objects/SouthAfricanIDNumber_Record__c/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <label>Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SA Citizen</fullName>
            </value>
            <value>
                <fullName>Permanent Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>