force-app/main/default/objects/SouthAfricanIDNumber_Record__c/fields/Holiday_Query_Status__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Query_Status__c</fullName>
    <label>Holiday Query Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retrieved</fullName>
            </value>
            <value>
                <fullName>Cached</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Empty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>