force-app/main/default/objects/SouthAfricanIDNumber_Record__c/fields/Holidays_Last_Query_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Holidays_Last_Query_DateTime__c</fullName>
    <label>Holidays Last Query DateTime</label>
    <type>DateTime</type>
</CustomField>