force-app/main/default/objects/SouthAfricanIDNumber_Record__c/fields/Recent_API_Status__c.field-meta.xml
<CustomField>
    <fullName>Recent_API_Status__c</fullName>
    <label>Recent API Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Skipped Cache Hit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>