force-app/main/default/objects/SouthAfricanIDNumber_Record__c/fields/Recent_Search_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Recent_Search_DateTime__c</fullName>
    <label>Recent Search DateTime</label>
    <type>DateTime</type>
</CustomField>