force-app/main/default/objects/SouthAfricanIDNumber_Record__c/fields/SAID_Search_Count__c.field-meta.xml
<CustomField>
    <fullName>SAID_Search_Count__c</fullName>
    <label>SAID Search Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>