force-app/main/default/objects/SouthAfricanIDNumber_Record__c/fields/SouthAfrican_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>SouthAfrican_ID_Number__c</fullName>
    <label>SouthAfrican ID Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>