force-app/main/default/objects/SouthAfricanIDNumber_Record__c/fields/SouthAfricanId_Hash__c.field-meta.xml
<CustomField>
    <fullName>SouthAfricanId_Hash__c</fullName>
    <externalId>true</externalId>
    <label>SouthAfricanId Hash</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>