force-app/main/default/objects/SouthAfricanIDNumber_Record__c/fields/Transaction_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Reference_Id__c</fullName>
    <label>Transaction Reference Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>