force-app/main/default/objects/SouthAfricanIDNumber_Record__c/fields/Verification_Result__c.field-meta.xml
<CustomField>
    <fullName>Verification_Result__c</fullName>
    <label>Verification Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>