force-app/main/default/objects/SouthAfricanIDNumber_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SouthAfrican_ID_Number__c</columns>
    <columns>BirthDate__c</columns>
    <columns>Citizenship__c</columns>
    <columns>Gender__c</columns>
    <columns>SAID_Search_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>